# Liquorfy

./: .env.example  .env.production.template  .gitattributes  .gitignore  .mailmap  DEPLOYMENT.md  LICENSE  README.md  docker-compose.dev.yml  docker-compose.supabase.yml  pyproject.toml
.claude/: CLAUDE.md
.claude/skills/: senior-ui-designer.md
.github/workflows/: ci-cd.yml
api/: STORE_COLLECTION_STATUS.md  check_chains.py  check_scraper_gaps.py  debug_bottle_o.py  debug_liquor_centre_stores.py  debug_thirsty_liquor.py  parse_liquor_centre_html.py  run_bottle_o_only.py  run_missing_store_scrapers.py  test_countdown_stores.py  test_countdown_stores2.py  test_product_detail.py  test_store_detail.py  verify_stores.py
api/app/: main.py
api/data/: NwStores.md  liquor_centre_raw.html  stores_seed.json  super_liquor_page.html
api/docs/: BOTTLE_O_SCRAPER.md  DB_SCHEMA.md  LIQUORLAND_STORE_INVESTIGATION.md  SCRAPER_GUIDE.md  store_locations.md
api/scripts/: README.md  aggregate_all_stores.py  analyze_chain_roi.py  audit_current_coverage.py  backfill_canonical_ids.py  bulk_geocode_all_stores.py  check_locks.py  clear_price_data.py  expand_store_data.py  final_store_summary.py  fix_chain_names.py  geocode_by_city_name.py  get_store_counts.py  import_countdown_stores.py  investigate_new_world.py  investigate_remaining_stores.py  investigate_store_apis.py  kill_stale.py  load_all_stores.py  load_foodstuffs_stores.py  load_foodstuffs_stores_no_geocoding.py  load_liquor_centre_stores.py  load_super_liquor.py  local_dev_setup.sh  realistic_coverage_plan.md  run_all_scrapers.py  run_all_store_scrapers.py  run_migration.py  run_scraper.py  scrape_all_chains_comprehensive.py  scrape_all_stores.py  scrape_single_chain.py  scrape_stores_api.py  seed_stores.py
docs/: ARCHITECTURE.md  DEPLOYMENT.md  LOAD_TESTING.md  README.md  ROADMAP.md  SCRAPER_PRIVACY_TOS_AUDIT.md  SECURITY.md  SETUP.md
docs/api/: DATABASE.md  DB_SCHEMA.md  README.md  SCRAPERS.md
docs/mobile/: README.md
infra/: docker-compose.prod.yml  docker-compose.yml
infra/dockerfiles/: api.Dockerfile  api.prod.Dockerfile  web.Dockerfile  worker.prod.Dockerfile
ios/Liquorfy/: Info.plist  LiquorfyApp.swift
ios/Liquorfy.xcodeproj/: project.pbxproj
ios/LiquorfyTests/: APIClientTests.swift  ComparisonManagerTests.swift  FormattersTests.swift  ModelsDecodingTests.swift  (+1 more)
web/: APP_STORE_GUIDE.md  capacitor.config.ts  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
(+305 files in other folders)
