[tool.poetry]
name = "liquorfy"
version = "0.1.0"
description = "Liquorfy API and web app"
authors = ["Liquorfy AI <dev@example.com>"]
packages = [
  { include = "liquorfy", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
pydantic = "^1.10.7"
uvicorn = "^0.21.1"
sqlalchemy = "^2.0.29"
asyncpg = "^0.29.0"
aiosqlite = "^0.19.0"
psycopg = {version = "^3.1.8", extras = ["binary"]}
httpx = {version = "^0.27.0", extras = ["http2"]}
selectolax = "^0.3.15"
redis = "^5.0.1"
pyjwt = "^2.8.0"
python-dotenv = "^1.2.1"
alembic = "^1.13.1"
playwright = "^1.40.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
httpx = {version = "^0.27.0", extras = ["cli"]}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
