[tool.poetry]
name = "liquorfy"
version = "0.1.0"
description = "Liquorfy API and web app"
authors = ["Liquorfy AI <dev@example.com>"]
packages = [
  { include = "liquorfy", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
pydantic = "^1.10.7"
uvicorn = "^0.21.1"
sqlalchemy = "^2.0.29"
asyncpg = "^0.29.0"
aiosqlite = "^0.19.0"
psycopg = {version = "^3.1.8", extras = ["binary"]}
httpx = {version = "^0.27.0", extras = ["http2"]}
selectolax = "^0.3.15"
redis = {version = "^5.0.1", extras = ["hiredis"]}
pyjwt = "^2.8.0"
python-dotenv = "^1.2.1"
alembic = "^1.13.1"
playwright = "^1.40.0"
python-dateutil = "^2.9.0.post0"
pytz = "^2025.2"
undetected-playwright = "^0.3.0"
slowapi = "^0.1.9"
bcrypt = "^4.0.1"
beautifulsoup4 = "^4.14.3"
geoalchemy2 = "^0.14.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
httpx = {version = "^0.27.0", extras = ["cli"]}

[tool.pytest.ini_options]
testpaths = ["api/app/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["api/app"]
omit = [
    "api/app/tests/*",
    "api/app/__init__.py",
    "api/app/*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
